--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Authenticator/vendors/WaxSealCore"]
 	path = Authenticator/vendors/WaxSealCore
 	url = https://github.com/TongKuo/WaxSealCore.git
+[submodule "Authenticator/vendors/OAuthSigningConstants"]
+	path = Authenticator/vendors/OAuthSigningConstants
+	url = https://gist.github.com/9aea4d69fac1cf0ba27d.git
