--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Authenticator/vendors/OAuthSigningConstants"]
 	path = Authenticator/vendors/OAuthSigningConstants
 	url = https://gist.github.com/9aea4d69fac1cf0ba27d.git
+[submodule "Authenticator/vendors/ZXingObjC"]
+	path = Authenticator/vendors/ZXingObjC
+	url = https://github.com/TheLevelUp/ZXingObjC.git
