--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Authenticator/vendors/PureLayout"]
 	path = Authenticator/vendors/PureLayout
 	url = https://github.com/PureLayout/PureLayout.git
+[submodule "Authenticator/vendors/aerogear-ios-otp"]
+	path = Authenticator/vendors/aerogear-ios-otp
+	url = https://github.com/aerogear/aerogear-ios-otp.git
