--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Authenticator/vendors/OAuthSigningConstants"]
 	path = Authenticator/vendors/OAuthSigningConstants
 	url = https://gist.github.com/9aea4d69fac1cf0ba27d.git
+[submodule "Authenticator/vendors/aerogear-ios-otp"]
+	path = Authenticator/vendors/aerogear-ios-otp
+	url = https://github.com/aerogear/aerogear-ios-otp.git
